# AdventOfCode

./: .gitignore  Cargo.toml  get-inputs.nu  get-inputs.sh
2020/: Cargo.toml
2020/src/: main.rs
2021/src/: day7.rs
2022/: Cargo.toml
2022/src/: day10.rs  day11.rs  day8.rs  main.rs
2023/: Cargo.toml
2023/src/: day2.rs
aoc2020/: .gitignore
aoc2020/src/: day2.rs  day4.rs  day7.rs  day8.rs  main.rs
aoc2021/: Cargo.toml  input24.txt  justfile
aoc2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day24.rs  day3.rs  day4.rs  day5.rs  day8.rs  day9.rs  main.rs
aoc2022/src/: day1.rs  day2.rs  day4.rs  day5.rs  day6.rs  day7.rs  day9.rs
aoc2023/: Cargo.toml
aoc2023/src/: day1.rs  day3.rs  main.rs
crates/2021/: Cargo.toml
crates/2021/src/: day15.rs  day18.rs  day24.rs  day5.rs  day6.rs
crates/2022/src/: day12.rs  day3.rs  lib.rs
crates/2023/src/: day4.rs  day5.rs  main.rs
crates/2024/: Cargo.toml
crates/2024/src/: day1.rs  main.rs
