[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.3"
itertools = "0.10"
once_cell = "1.5.2"
regex = "1.4.2"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
