[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
itertools = "0.10.5"
num-bigint = "0.4.3"
regex = "1.7.0"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
