[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
fnv = "1.0.7"
itertools = "0.10.3"
rayon = "1.5.1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[features]
